# binfo

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
include/: detect.hpp  inspect.hpp
src/: detect.cpp  inspect.cpp  main.cpp
tests/: test_detect.cpp
